--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 .calculator {
  padding: 10px;
- border-radius: 1em;
+ border-radius:0vmax;
  height: 380px;
  width: 400px;
  margin: auto;
@@ -9,7 +9,7 @@
  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 .display-box {
- font-family: 'Orbitron', sans-serif;
+ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  background-color: #dcdbe1;
  border: solid black 0.5px;
  color: black;
@@ -18,8 +18,8 @@
  height: 65%;
 }
 .button {
- font-family: 'Orbitron', sans-serif;
- background-color: #4e0a7e;
+ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ background-color: #013e42;
  color: white;
  border: solid black 0.5px;
  width: 100%;
